.k8s/api-cart/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-api-cart-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-api-cart-backend
  template:
    metadata:
      labels:
        app: tcc-api-cart-backend
    spec:
      containers:
        - name: backend
          image: ahmentz/tcc-backend:api-cart-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8001
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "0.5"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
