.k8s/api-cart/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cart-backend-service
spec:
  type: NodePort
  selector:
    app: tcc-api-cart-backend
  ports:
    - port: 8001
      targetPort: 8001
