.k8s/api-cart/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-cart-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: api-cart-backend-service
                port:
                  number: 8001
